{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 234,
  "lineage": "b95046aa-969e-53aa-1432-6e34e036e509",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "all-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T06:01:33.056-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bucket-project-410808/global/firewalls/allow-all-to-bastion",
            "log_config": [],
            "name": "allow-all-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
            "priority": 1000,
            "project": "bucket-project-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/firewalls/allow-all-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "all-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T06:01:33.061-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bucket-project-410808/global/firewalls/allow-all-to-web",
            "log_config": [],
            "name": "allow-all-to-web",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
            "priority": 1000,
            "project": "bucket-project-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/firewalls/allow-all-to-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T06:02:11.584-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bucket-project-410808/global/firewalls/allow-bastion-to-db",
            "log_config": [],
            "name": "allow-bastion-to-db",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-db",
            "priority": 1000,
            "project": "bucket-project-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/firewalls/allow-bastion-to-db",
            "source_ranges": [
              "35.184.113.13"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance-bastion.google_compute_instance.insset-instances",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.vpc_subnet",
            "module.vpc_db.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T06:01:33.093-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bucket-project-410808/global/firewalls/allow-bastion-to-ssh",
            "log_config": [],
            "name": "allow-bastion-to-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
            "priority": 1000,
            "project": "bucket-project-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/firewalls/allow-bastion-to-ssh",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-01-11T06:01:33.108-08:00",
            "deny": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bucket-project-410808/global/firewalls/deny-all",
            "log_config": [],
            "name": "deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
            "priority": 2000,
            "project": "bucket-project-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/firewalls/deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion",
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-all-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-01-11T06:01:43.479-08:00",
            "deny": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bucket-project-410808/global/firewalls/deny-all-db",
            "log_config": [],
            "name": "deny-all-db",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-db",
            "priority": 2000,
            "project": "bucket-project-410808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/firewalls/deny-all-db",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_db.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.instance-bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "insset-instances",
      "provider": "module.instance-bastion.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/zones/us-central1-a/disks/insset-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/bucket-project-410808/zones/us-central1-a/instances/insset-bastion",
            "instance_id": "4752881383501875748",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "leo:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCzlRQT4S47WFYKtVNgFidwrhzEAXBNxEiLJlZPrcGDyI4IAHsWLJsNRJd1TQK0PgNw7jPmhNzPK9gP0WuwV4/rn1tne7zErls7LJfaAVBEf2gqEhV1qlEdL1P8ESdSugmY/K02EwtEPJPoXjNKUrVuIzwecTJiQ+OKG4pt2vKLVF1c/Ge7jzVhLIIuIDUPRtzkPklrmm+1pCkTJPfrsRhcmyvV/aGVWcePerHAjmzxZ+5xs5ddhZDJOy93kDiEGakTV6zfhco8zsi0GUtnaJIviNG1L5cN2pjPXfnxJrftaXLvSUI7eP2ccJgPDWyYS9u2CuX11pUfP/38ANPgryKZ leolo@Leo\r\n"
            },
            "metadata_fingerprint": "RYWfIaEFggU=",
            "name": "insset-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.184.113.13",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
                "network_ip": "10.0.20.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/regions/us-central1/subnetworks/mon-subnet-terraform-002",
                "subnetwork_project": "bucket-project-410808"
              }
            ],
            "project": "bucket-project-410808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/zones/us-central1-a/instances/insset-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instance-db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db-instances",
      "provider": "module.instance-db.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/zones/us-west1-a/disks/insset-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/bucket-project-410808/zones/us-west1-a/instances/insset-db",
            "instance_id": "7434278987367598605",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "leo:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCzlRQT4S47WFYKtVNgFidwrhzEAXBNxEiLJlZPrcGDyI4IAHsWLJsNRJd1TQK0PgNw7jPmhNzPK9gP0WuwV4/rn1tne7zErls7LJfaAVBEf2gqEhV1qlEdL1P8ESdSugmY/K02EwtEPJPoXjNKUrVuIzwecTJiQ+OKG4pt2vKLVF1c/Ge7jzVhLIIuIDUPRtzkPklrmm+1pCkTJPfrsRhcmyvV/aGVWcePerHAjmzxZ+5xs5ddhZDJOy93kDiEGakTV6zfhco8zsi0GUtnaJIviNG1L5cN2pjPXfnxJrftaXLvSUI7eP2ccJgPDWyYS9u2CuX11pUfP/38ANPgryKZ leolo@Leo\r\n"
            },
            "metadata_fingerprint": "RYWfIaEFggU=",
            "name": "insset-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.135.42",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-db",
                "network_ip": "10.0.21.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/regions/us-west1/subnetworks/mon-subnet-terraform-db",
                "subnetwork_project": "bucket-project-410808"
              }
            ],
            "project": "bucket-project-410808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/zones/us-west1-a/instances/insset-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "module.vpc_db.google_compute_network.vpc_network",
            "module.vpc_db.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instance-nginx",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "insset-instances",
      "provider": "module.instance-nginx.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/zones/us-central1-a/disks/insset-nginx"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/bucket-project-410808/zones/us-central1-a/instances/insset-nginx",
            "instance_id": "5017753768992852516",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "leo:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCzlRQT4S47WFYKtVNgFidwrhzEAXBNxEiLJlZPrcGDyI4IAHsWLJsNRJd1TQK0PgNw7jPmhNzPK9gP0WuwV4/rn1tne7zErls7LJfaAVBEf2gqEhV1qlEdL1P8ESdSugmY/K02EwtEPJPoXjNKUrVuIzwecTJiQ+OKG4pt2vKLVF1c/Ge7jzVhLIIuIDUPRtzkPklrmm+1pCkTJPfrsRhcmyvV/aGVWcePerHAjmzxZ+5xs5ddhZDJOy93kDiEGakTV6zfhco8zsi0GUtnaJIviNG1L5cN2pjPXfnxJrftaXLvSUI7eP2ccJgPDWyYS9u2CuX11pUfP/38ANPgryKZ leolo@Leo\r\n"
            },
            "metadata_fingerprint": "RYWfIaEFggU=",
            "name": "insset-nginx",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.198.166.47",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
                "network_ip": "10.0.20.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/regions/us-central1/subnetworks/mon-subnet-terraform-002",
                "subnetwork_project": "bucket-project-410808"
              }
            ],
            "project": "bucket-project-410808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/zones/us-central1-a/instances/insset-nginx",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
            "mtu": 0,
            "name": "mon-vpc-terraform-002",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8102614626345306718",
            "project": "bucket-project-410808",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-11T06:01:33.715-08:00",
            "gateway_address": "10.0.20.1",
            "id": "projects/bucket-project-410808/regions/us-central1/subnetworks/mon-subnet-terraform-002",
            "ip_cidr_range": "10.0.20.0/24",
            "name": "mon-subnet-terraform-002",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-002",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bucket-project-410808",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/regions/us-central1/subnetworks/mon-subnet-terraform-002",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_db",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/bucket-project-410808/global/networks/mon-vpc-terraform-db",
            "mtu": 0,
            "name": "mon-vpc-terraform-db",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2027008169220393566",
            "project": "bucket-project-410808",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-db"
          }
        }
      ]
    },
    {
      "module": "module.vpc_db",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-11T06:01:45.041-08:00",
            "gateway_address": "10.0.21.1",
            "id": "projects/bucket-project-410808/regions/us-west1/subnetworks/mon-subnet-terraform-db",
            "ip_cidr_range": "10.0.21.0/24",
            "name": "mon-subnet-terraform-db",
            "network": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/global/networks/mon-vpc-terraform-db",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bucket-project-410808",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bucket-project-410808/regions/us-west1/subnetworks/mon-subnet-terraform-db",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_db.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}